--- a/.eslintrc
+++ b/.eslintrc
@@ -3,11 +3,16 @@
     "browser": true,
     "es2021": true
   },
+  "globals": {
+    "NodeJS": true
+  },
   "extends": [
     "eslint:recommended",
-    "plugin:react/recommended",
-    "plugin:react/jsx-runtime" // If you are using the new JSX transform in React 17+
+    "plugin:react/jsx-runtime",
+    "plugin:@next/next/recommended"
+    // "plugin:node/recommended"
   ],
+  "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "ecmaFeatures": {
       "jsx": true
@@ -15,11 +20,17 @@
     "ecmaVersion": 12,
     "sourceType": "module"
   },
-  "plugins": ["react"],
+  "plugins": ["react", "@typescript-eslint"],
   "rules": {
     "react/jsx-curly-brace-presence": [
       "error",
       { "props": "never", "children": "ignore" }
-    ]
+    ],
+    "no-unused-vars": 0
+  },
+  "settings": {
+    "react": {
+      "version": "detect"
+    }
   }
 }
