--- a/.eslintrc
+++ b/.eslintrc
@@ -21,13 +21,20 @@
     "ecmaVersion": 12,
     "sourceType": "module"
   },
-  "plugins": ["react", "@typescript-eslint"],
+  "plugins": [
+    "react",
+    "@typescript-eslint",
+    "unused-imports",
+    "simple-import-sort"
+  ],
   "rules": {
     "react/jsx-curly-brace-presence": [
       "error",
       { "props": "never", "children": "ignore" }
     ],
-    "no-unused-vars": 0
+    "no-unused-vars": 0,
+    "simple-import-sort/imports": "error",
+    "simple-import-sort/exports": "error"
   },
   "settings": {
     "react": {
