--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
     "eslint-plugin-unused-imports": "^4.0.1",
     "prettier": "^3.3.3",
     "typescript": "^5.5.4"
