--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@mantine/hooks": "^7.11.2",
     "@mantine/nprogress": "^7.11.2",
     "@tabler/icons-react": "^3.11.0",
+    "@tanstack/react-query": "^5.51.15",
+    "dayjs": "^1.11.12",
     "framer-motion": "^11.3.19",
     "next": "14.2.5",
     "react": "^18.3.1",
